--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,34 @@
 name: Build and Deploy
+
 on:
   push:
-    branches: [ main ] 
+    branches:
+      - main
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up JDK
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v2
+      
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          java-version: '11' 
-      - name: Build
-        run: ./gradlew build 
-      - name: Test
-        run: ./gradlew test 
-      - name: Deploy
-        uses: appleboy/ssh-action@master 
+          java-version: 11
+      
+      - name: Build with Maven
+        run: mvn package --file pom.xml
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          host: ${{ secrets.HOST }} 
-          username: ${{ secrets.USUARIO }} 
-          password: ${{ secrets.SENHA }}
-          script: |
+          username: ${{ secrets.DOCKER_USUARIO }}
+          password: ${{ secrets.DOCKER_SENHA }}
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: your-dockerhub-username/your-dockerhub-repo-name:latest
+          distribution: 'ubuntu'
