--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Build with Maven
         run: mvn package --file pom.xml
       
+      - name: Run tests
+        run: mvn test
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -32,3 +35,9 @@ jobs:
           push: true
           tags: your-dockerhub-username/your-dockerhub-repo-name:latest
           distribution: 'ubuntu'
+          
+      - name: Run tests
+        run: mvn test
+        
+
+
